done with basic requirement.

--- a/starter-code/app/index.html
+++ b/starter-code/app/index.html
@@ -14,6 +14,12 @@
       document.getElementById("nazgul-screech").play();
     }
   </script>
+  <audio id="hobbit-theme" src="./media/hobbit_theme.mp3"></audio>
+  <script charset="utf-8">
+    function hobbitTheme(){
+      document.getElementById("hobbit-theme").play();
+    }
+  </script>
   <script src="./scripts/fellowship.js"></script>
 </body>
 </html>
